try fix mobil card-box z-index problem

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -5,7 +5,7 @@ body{
  @apply bg-black;   
 }
 .card-box {
-    @apply relative w-[100px] h-[100px] md:w-[150px] md:h-[150px];
+    @apply relative z-0 w-[100px] h-[100px] md:w-[150px] md:h-[150px];
     transform-style: preserve-3d;
     transform: perspective(1000px) rotateX(0deg);
 }
@@ -14,7 +14,7 @@ body{
     transform-origin: center;
     transform-style: preserve-3d;
     transform: translateZ(1000px);
-    /* -webkit-box-reflect: below 0px linear-gradient(transparent,transparent,#0004 ); */
+    -webkit-box-reflect: below 0px linear-gradient(transparent,transparent,#0004 );
 }
 .card-box span img {
     @apply absolute top-0 left-0 w-full h-full object-cover;
